--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240725142721">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240725162109">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -69,7 +69,8 @@
 
 				<h2 class="popup__title">Добавить пару</h2>
 				<div class="popup__actions">
-					<form id="form" class="page__form form" action="#" method="post">
+					<!-- https://jsonplaceholder.typicode.com/posts -->
+					<form id="form" class="page__form form" action="https://jsonplaceholder.typicode.com/posts" target="_blank" method="post">
 						<div class="form__content">
 							<div class="form__column">
 								<h2 class="form__title">Номер тягача <span></span></h2>
@@ -111,7 +112,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20240725142721"></script>
+	<script src="js/app.min.js?_v=20240725162109"></script>
 
 
 </body>
