--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
 <head>
-	<title>Logistics bullshit</title>
+	<title>Logistic Helper</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20241016155546">
+	<link rel="stylesheet" href="css/style.min.css?_v=20241024124416">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Подключаем SweetAlert2 -->
-	<!-- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10?_v=20241016155546"></script> -->
+	<!-- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10?_v=20241024124416"></script> -->
 
 </head>
 
@@ -21,7 +21,7 @@
 			<div class="header__container">
 				<div class="header__body">
 					<a href class="header__logo"><img src="img/logo.svg" alt>
-						<div class="header__text"><span>Лучшая</span> логистическая компания</div>
+						<div class="header__text"><span>Logistic</span> Helper</div>
 					</a>
 					<div class="header__actions">
 						<button id="login" type="submit" class="header__button header__button--icon" data-popup="#popup-login"> <span class="_icon-user"></span>Авторизация</button>
@@ -63,7 +63,7 @@
 						<div class="list__column">Куда</div>
 						<div class="list__column">Вид груза </div>
 						<div class="list__column">Комментарий</div>
-						<div class="list__column">Действие</div>
+						<div class="list__column list__column--action hidden">Действие</div>
 					</div>
 					<div id="list" class="list__table">
 					</div>
@@ -165,8 +165,8 @@
 			</div>
 		</div>
 	</div>
-	<!-- <script src="js/app.min.js?_v=20241016155546"></script> -->
-	<script src="js/app.js?_v=20241016155546"></script>
+	<!-- <script src="js/app.min.js?_v=20241024124416"></script> -->
+	<script src="js/app.js?_v=20241024124416"></script>
 
 
 </body>
